--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,4 +41,4 @@ backup_jobs:
     keep: ""
 
 backup_ruby_package: ruby2.3
-backup_ruby_dev_package: ruby-dev2.3
+backup_ruby_dev_package: ruby2.3-dev
