--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,5 +1,5 @@
 ---
-- name: Setup BrightBox PPA for ruby php_packages
+- name: Setup BrightBox PPA for ruby packages
   apt_repository:
     repo: "ppa:brightbox/ruby-ng"
 
