--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,12 @@
 ---
 
 backup_setup:
-  user:       'root'
-  config_dir: '/etc/backup'
-  tmp_dir:    '/tmp/backup'
-  data_dir:   '/var/lib/backup'
-  log_dir:    '/var/log/backup'
+  user:        'root'
+  config_dir:  '/etc/backup'
+  tmp_dir:     '/tmp/backup'
+  data_dir:    '/var/lib/backup'
+  log_dir:     '/var/log/backup'
+  local_store: '/data/backups'
 
 backup_config_chunks: 250
 
