--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -14,6 +14,14 @@
     - "{{ backup_setup.log_dir }}"
     - "{{ backup_setup.local_store }}"
 
+- name: Copy custom backup
+  sudo: yes
+  copy: 
+    src: cli_s3_syncer.rb
+    dest: "{{ backup_setup.config_dir }}"
+    owner: "{{ backup_setup.user }}"
+    group: "{{ backup_setup.user }}"
+
 - name: Configure backups config
   template:
     src:   config.rb.j2
@@ -29,7 +37,7 @@
     owner: "{{ backup_setup.user }}"
     group: "{{ backup_setup.user }}"
     mode:  0600
-  with_dict: backup_jobs
+  with_dict: "{{ backup_jobs }}"
 
 - name: Configure cron
   template:
