--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -35,3 +35,7 @@
     name:         backup
     state:        present
     user_install: false
+
+- name: awscli | install
+  pip:
+    name: awscli
